# streamsnow

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASING.md  pyproject.toml  streamsnow.config.example.yaml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  publish.yml
docs/: data-discovery.md  deploy-setup.md  deploying.md  distribution.md  getting-started.md
examples/: README.md
examples/sample-dashboard/: README.md  branding.py  data.py  requirements.txt  streamlit_app.py
examples/sample-dashboard/pages/: overview.py  trends.py
hooks/: hooks.json  session_start.sh
skills/_shared/: cross-agent-review.md  deploy-error-translator.md  playwright-walkthrough.md  sync-with-main.md
skills/add-page/: SKILL.md
skills/apply-review/: SKILL.md
skills/auto-review-app/: SKILL.md
skills/deep-dive-data/: SKILL.md
skills/migrate-app/: SKILL.md
skills/new-app/: SKILL.md
skills/onboard/: SKILL.md
skills/preview-app/: SKILL.md
skills/refine-requirements/: SKILL.md
skills/review-app/: SKILL.md
skills/ship-app/: SKILL.md
skills/sql-review/: SKILL.md
skills/start-app/: SKILL.md
skills/validate-app/: SKILL.md
streamsnow/: __init__.py  cli.py  config.py  deploy.py  policy.py  scaffolder.py
streamsnow/_templates/app/: AGENTS.md.j2  branding.py.j2  config.toml.j2  environment.yml.j2  example_metric.sql.j2  overview.py.j2  pyproject.toml.j2  secrets.toml.example.j2  snowflake.yml.j2  sql_loader.py.j2  streamlit_app.py.j2
streamsnow/_templates/repo/: AGENTS.md.j2  README.md.j2  ci.yml.j2  deploy.git.yml.j2  deploy.yml.j2  gitignore.j2  pre-commit-config.yaml.j2
streamsnow/tools/: __init__.py  check_app_security.py  check_bind_predicates.py  check_caching.py  check_export_clean.py  check_schema_refs.py  validate_app.py
tests/: test_config.py  test_deploy.py  test_export_clean.py  test_init.py  test_smoke.py  test_validate.py
