[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "streamsnow"
version = "0.0.1"
description = "Open-source toolkit for building, governing, and shipping Streamlit-in-Snowflake apps with Claude Code"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Kyle Chalmers" }]
keywords = ["snowflake", "streamlit", "claude-code", "dashboards", "scaffolding", "governance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pyyaml>=6",
    "ruamel.yaml>=0.18,<1.0",
    "copier>=9",
    "jinja2>=3.1",
    "packaging>=23",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15",
    "pytest>=8",
    "pre-commit>=4",
]

[project.urls]
Homepage = "https://github.com/kyle-chalmers/streamsnow"
Repository = "https://github.com/kyle-chalmers/streamsnow"
Issues = "https://github.com/kyle-chalmers/streamsnow/issues"

[project.scripts]
streamsnow = "streamsnow.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["streamsnow"]

# The wheel ships the package code only. Templates, scaffold assets, skills,
# and the plugin manifest live alongside in the repo and are resolved at
# runtime relative to the install (see streamsnow/paths.py in Phase 1).

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
