[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "streamsnow"
version = "0.0.1"
description = "Open-source toolkit for building, governing, and shipping Streamlit-in-Snowflake apps with Claude Code"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Kyle Chalmers" }]
keywords = ["snowflake", "streamlit", "claude-code", "dashboards", "scaffolding", "governance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pyyaml>=6",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15",
    "pytest>=8",
    "pre-commit>=4",
]

[project.urls]
Homepage = "https://github.com/kyle-chalmers/streamsnow"
Repository = "https://github.com/kyle-chalmers/streamsnow"
Issues = "https://github.com/kyle-chalmers/streamsnow/issues"

[project.scripts]
streamsnow = "streamsnow.cli:app"

[tool.hatch.build.targets.wheel]
# The whole streamsnow/ package ships, including the Jinja scaffold templates
# under streamsnow/_templates/ (non-.py files are included by default).
packages = ["streamsnow"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# B008: Typer's idiom puts Option()/Argument() calls in parameter defaults.
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
